--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <h1>Hello</h1>
+  <header class="header">
+    <h1>Шапка проекта</h1>
+  </header>
 </body>
-
+    
 </html>
