--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <main class="main">
     <h1>Основной контент</h1>
   </main>
+  <footer class="footer">
+    <h1> Подвал сайта </h1>
+  </footer>
 </body>
     
 </html>
