--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="header">
-    <h1>Шапка проекта</h1>
+    <h1>Шапка</h1>
   </header>
   <main class="main">
-    <h1>Основной контент</h1>
+    <h1> контент</h1>
   </main>
   <footer class="footer">
-    <h1> Подвал сайта </h1>
+    <h1> Подвал  </h1>
   </footer>
 </body>
     
